# Almabase_assignment

./: README.md
backend/: README.md  clean.py  example.env  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/auth/: dependencies.py  hashing.py  jwt.py
backend/app/routes/: auth.py  export.py  rag.py  review.py  upload.py
backend/app/services/: chroma_service.py  chunking_service.py  embedding_service.py  export_service.py  file_service.py  pdf_service.py  rag_service.py  review_service.py  user_service.py
backend/app/utils/: file_utils.py
backend/chroma_data/: chroma.sqlite3
backend/exports/6/: questionnaire_7.md  questionnaire_8.md
frontend/: .firebaserc  README.md  pubspec.yaml
frontend/.firebase/: hosting.YnVpbGRcd2Vi.cache
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/kotlin/com/almabase/frontend/: MainActivity.kt
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/models/: answer_model.dart
frontend/lib/screens/: dashboard_screen.dart  login_screen.dart  review_screen.dart  signup_screen.dart  upload_screen.dart
frontend/lib/services/: api_service.dart
frontend/lib/widgets/: primary_button.dart
frontend/linux/: CMakeLists.txt
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/windows/runner/: Runner.rc
